syntax = "proto3";
package m2g.pb;

enum ConstantType {
  NO_CONSTANT = 0;
}
